app_status.json

--- a/app_status.json
+++ b/app_status.json
@@ -1,6 +1,6 @@
 {
-  "active": true,
-  "minVersion": 2,
+  "active": false,
+  "minVersion": 1,
   "latestVersion": 2,
   "message": "Nouvelle mise à jour obligatoire pour continuer !"
 }
