--- a/app_status.json
+++ b/app_status.json
@@ -1,5 +1,5 @@
 {
-  "active": false,
+  "active": true,
   "minVersion": 1,
   "latestVersion": 2,
   "message": "Nouvelle mise à jour obligatoire pour continuer !"
